add pods metrics page
